--- a/page2.html
+++ b/page2.html
@@ -6,60 +6,53 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   <meta content="telephone=no" name="format-detection"/>
-  <title>en-winston</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@100..900&display=swap" rel="stylesheet">
+  <title>WINSTON ELECTRO</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<header>
-  <div class="container">
-    <a href="#"><img src="img/logo.svg" alt="logo" class="img-logo"></a>
-  </div>
-</header>
 <main class="regular-main">
   <div class="container">
     <div class="regular-content">
-      <img src="img/winston-ss.png" alt="winston" class="mb-19">
+      <img src="img/winston-purple.png" alt="winston" class="mb-28">
       <div class="slider-wrapper mb-30">
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide item-slider">
               <p class="slider-text">
-                Lorem ipsum dolor sit amet,<br>
-                consectetur adipiscing elit, sed do <br>
-                labore et dolore magna aliqua?
+                გსმენიათ სიახლეზე Winston-ის <br>
+                ბრენდისგან - Winston XS Compact <br>
+                Electro, ახალი მიქსი: კენკრის <br>
+                კაპსულით,  გაჯერებული <br>
+                უნიკალური თამბაქოს ნაზავი <br>
+                ხილის არომატით,  ხელმისაწვდომ <br>
+                ფასად -  7.4 ლარი*?
               </p>
             </div>
             <div class="swiper-slide item-slider">
               <p class="slider-text">
-                Ut enim ad minim veniam, quis nostrud <br>
-                exercitation ullamco laboris nisi ut <br>
-                aliquip ex ea commodo consequat?
-               </p>
-            </div>
-            <div class="swiper-slide item-slider">
-              <p class="slider-text">
-                Ut enim ad minim veniam, quis nostrud <br>
-                exercitation ullamco laboris nisi ut <br>
-                aliquip ex ea commodo consequat?
+                Winston Electro-ს რომელი <br>
+                მახასიათებელი შეიძლება <br>
+                გახდეს თქვენთვის <br>
+                სამომავლოდ შეძენის მიზეზი?
               </p>
             </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
       </div>
-      <div class="buttons-wrap mb-38">
-        <button class="btn">ANSWER 1</button>
-        <button class="btn">ANSWER 2</button>
-        <button class="btn">ANSWER 3</button>
+      <div class="button-holder">
+        <button class="btn">კი</button>
+        <button class="btn">არა</button>
+        <button class="btn double-btn">არ ვარ დარწმუნებული</button>
       </div>
-      <button class="icon-button btn mb-38"><img src="img/icons/arrow-right.svg" alt="button"></button>
-      <p class="star-text">* Please check the price with the person at the <br> counter. Maximum retail price is 600 AMD</p>
+      <button class="icon-button btn mb-44"><img src="img/icons/arrow-right.svg" alt="button"></button>
+      <p class="star-text mb-30">
+        * რეკომენდებული ფასი
+      </p>
+      <a href="#" class="link">გამოწერის გაუქმება</a>
     </div>
   </div>
 
