--- a/page6.html
+++ b/page6.html
@@ -6,29 +6,26 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   <meta content="telephone=no" name="format-detection"/>
-  <title>en-winston</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@100..900&display=swap" rel="stylesheet">
+  <title>WINSTON ELECTRO</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<header>
-  <div class="container">
-    <a href="#"><img src="img/logo.svg" alt="logo" class="img-logo"></a>
-  </div>
-</header>
-<main class="regular-main pt-68">
+<main class="regular-main">
   <div class="container">
     <div class="regular-content">
-      <h1 class="regular-title mb-47 small-mode">YOU HAVE ALREADY <br> PARTICIPATED IN THE <br>SURVEY 1 TIME</h1>
-      <img src="img/ring.svg" alt="ring" class="mb-56">
-      <p class="regular-text">
-        You can participate in the survey <br>maximum 1 times
+      <h1 class="regular-title mb-70">
+        ᲒᲐᲛᲝᲙᲘᲗᲮᲕᲐ
+        <br>
+        ᲓᲐᲛᲗᲐᲕᲠᲓᲐ
+      </h1>
+      <img src="img/message.svg" alt="icon" class="mb-70">
+      <p class="regular-text big-mode mb-200">
+        Გმადლობთ, რომ დრო <br> დაგვითმეთ
       </p>
+      <a href="#" class="link">გამოწერის გაუქმება</a>
     </div>
   </div>
 
