--- a/page7.html
+++ b/page7.html
@@ -6,38 +6,31 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   <meta content="telephone=no" name="format-detection"/>
-  <title>en-winston</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@100..900&display=swap" rel="stylesheet">
+  <title>WINSTON ELECTRO</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<header>
-  <div class="container">
-    <a href="#"><img src="img/logo.svg" alt="logo" class="img-logo"></a>
-  </div>
-</header>
 <main class="regular-main">
   <div class="container">
-    <div class="regular-content pt-68">
-      <h1 class="title-34 mb-19">
-        unsubscribe
+    <div class="regular-content">
+      <h1 class="regular-title mb-25">
+        გამოწერის გაუქმება
       </h1>
-      <img src="img/mail.svg" alt="mail" class="mb-19">
-      <p class="regular-text small-mode mb-22">Please tell us why do you want <br>to unsubscribe:</p>
-      <div class="buttons-wrap mb-38">
-        <button class="btn small-mode">I receive too many messages</button>
-        <button class="btn small-mode">I'm not interested is such offers</button>
-        <button class="btn small-mode">I never subscribed</button>
-        <button class="btn small-mode">I do not smoke</button>
-        <button class="btn small-mode">Other reason, please specify</button>
-        
+      <img src="img/mail.svg" alt="icon" class="mb-25">
+      <p class="regular-text small-mode mb-25">
+        Გმადლობთ, რომ დრო <br> დაგვითმეთ
+      </p>
+      <div class="buttons-wrap">
+        <button class="btn small-mode">არ ვარ <br> დაინტერესებული ასეთი <br>  შეთავაზებებით</button>
+        <button class="btn small-mode">არასდროს გამომიწერია</button>
+        <button class="btn small-mode">არ ვეწევი</button>
+        <button class="btn small-mode">სხვა მიზეზი</button>
+        <button class="btn small-mode">არ მინდა მიზეზის br დასახელება</button>
       </div>
-      <button class="icon-button btn"><img src="img/icons/arrow-right.svg" alt="button"></button>
+      <button class="icon-button btn mb-44"><img src="img/icons/arrow-right.svg" alt="button"></button>
     </div>
   </div>
 
