--- a/page4.html
+++ b/page4.html
@@ -6,29 +6,26 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   <meta content="telephone=no" name="format-detection"/>
-  <title>en-winston</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@100..900&display=swap" rel="stylesheet">
+  <title>WINSTON ELECTRO</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<header>
-  <div class="container">
-    <a href="#"><img src="img/logo.svg" alt="logo" class="img-logo"></a>
-  </div>
-</header>
-<main class="regular-main pt-68">
+<main class="regular-main">
   <div class="container">
     <div class="regular-content">
-      <h1 class="regular-title mb-84">THE SURVEY <br>IS OVER</h1>
-      <img src="img/message.svg" alt="message" class="mb-68">
-      <p class="regular-text">
-        Thank you for your time
+      <h1 class="regular-title mb-30">მადლობა <br> გამოკითხვაში <br> მონაწილეობისთვის</h1>
+      <img src="img/mobile.svg" alt="icon" class="mb-55">
+      <p class="regular-text mb-200">
+        თუ 24 საათის განმავლობაში <br>
+        არ მიიღებთ შევსებას, გთხოვთ, <br>
+        დაგვიკავშირდეთ ამ ნომერზე:
+        <a href="tel:+995577712407" class="phone-link">+995577712407</a>
       </p>
+      
+      <a href="#" class="link">გამოწერის გაუქმება</a>
     </div>
   </div>
 
