--- a/page5.html
+++ b/page5.html
@@ -6,35 +6,27 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   <meta content="telephone=no" name="format-detection"/>
-  <title>en-winston</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@100..900&display=swap" rel="stylesheet">
+  <title>WINSTON ELECTRO</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<header>
-  <div class="container">
-    <a href="#"><img src="img/logo.svg" alt="logo" class="img-logo"></a>
-  </div>
-</header>
-<main class="regular-main pt-68">
+<main class="regular-main">
   <div class="container">
     <div class="regular-content">
-      <h1 class="regular-title mb-47 small-mode">THANK YOU <br>FOR PARTICIPATING <br>IN THE SURVEY</h1>
-      <img src="img/mobile.svg" alt="mobile" class="mb-56">
-      <p class="regular-text mb-40">
-        Once the code is approved by our <br> moderator you will recive 200 AMD
+      <h1 class="regular-title mb-30">
+        თქვენ უკვე მიიღეთ <br>
+        მონაწილეობა <br>
+        ჩვენს გამოკითხვაში
+      </h1>
+      <img src="img/union.svg" alt="icon" class="mb-55">
+      <p class="regular-text big-mode mb-200">
+        შეთავაზების გამოყენება <br> შეგიძლიათ მხოლოდ <br> ერთხელ
       </p>
-      <p class="regular-text">
-        In case you do not receive <br>
-        mobile top up during 24 hours <br>
-        please contact us via <br>
-        <a href="mailto:packinfoar@jti.com" class="mail-link">packinfoar@jti.com</a>
-      </p>
+      
+      <a href="#" class="link">გამოწერის გაუქმება</a>
     </div>
   </div>
 
